# xlodit

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: handoff_260407_1.md  traceability_260407_1.md
llm/: agent_executor_instructions_v_1.md  code_style.md  decision_log.md  general_executor_instructions_v1.md  gotchas.md  progress_tracker.md  project_handoff_standard_v1.md  python_toolbox.md  sessions_logger.md  user-persona.md
src/xlodit/: __init__.py  __main__.py  audit.py  backend.py  cli.py  models.py  parsing.py  rules.py  traceback_engine.py
tests/: conftest.py  test_audit.py  test_backend_behavior.py  test_cli.py  test_parsing.py  test_traceback.py
