[project]
name = "xlodit"
version = "0.1.0"
description = "Validator/debugger for .xlsx workbooks"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openpyxl>=3.1.0",
]

[project.scripts]
xlodit = "xlodit.cli:main"

[build-system]
requires = ["hatchling>=1.0.0"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
