[project]
name = "xlodit"
version = "0.1.0"
description = "Validator/debugger for .xlsx workbooks"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Utilities",
]
keywords = ["xlsx", "excel", "audit", "validation", "traceback", "cli"]
urls = { "Homepage" = "https://github.com/placerte/xlodit" }
dependencies = [
    "openpyxl>=3.1.0",
    "rich>=13.7.0",
]

[project.scripts]
xlodit = "xlodit.cli:main"

[build-system]
requires = ["hatchling>=1.0.0"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
